--- a/services/web/package.json
+++ b/services/web/package.json
@@ -9,12 +9,15 @@
     "start": "next start -p 4000",
     "format": "prettier --write .",
     "format-ci": "prettier --check .",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "pnpx prisma migrate dev",
+    "generate": "pnpx prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.8",
-    "@supabase/auth-helpers-nextjs": "^0.2.7",
-    "@supabase/auth-helpers-react": "^0.2.3",
+    "@prisma/client": "^4.3.1",
+    "@supabase/auth-helpers-nextjs": "^0.2.8",
+    "@supabase/auth-helpers-react": "^0.2.4",
     "@supabase/supabase-js": "^1.35.6",
     "axios": "^0.27.2",
     "daisyui": "^2.27.0",
@@ -37,6 +40,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.3.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
